--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li><a href="#home" class="nav-link"><i class="fas fa-home"></i> Home</a></li>
             <li><a href="#aboutme" class="nav-link"><i class="fas fa-user-alt"></i> About</a></li>
             <li><a href="#projects" class="nav-link"><i class="fas fa-project-diagram"></i> Projects</a></li>
-            <li><a href="#research" class="nav-link"><i class="fas fa-book-open"></i> Research</a></li>
+            <li><a href="#Research" class="nav-link"><i class="fas fa-book-open"></i> Research</a></li>
             <li><a href="#skills" class="nav-link"><i class="fas fa-laptop-code"></i> Skills</a></li>
             <li><a href="#interests" class="nav-link"><i class="fas fa-info"></i>Interests</a></li>
             <li><a href="#experience" class="nav-link"><i class="fas fa-briefcase"></i> Experience</a></li>
