--- a/index.html
+++ b/index.html
@@ -97,6 +97,26 @@
                     <a href="/labels/SIP.png" class="project-link"><i class="fas fa-external-link-alt"></i> Design</a>
                 </div>
             </div>
+            <div class="project-card" data-aos="fade-up" data-aos-delay="200">
+                <div class="project-icon"><i class="fas fa-robot"></i></div>
+                <h3>Foreign Sketch Generator</h3>
+                <p>It give the grey-scale sketch image based on description of a person</p>
+                <div class="project-tech"><span>GAN</span><span>Machine Learning</span><span>NLP</span></div>
+                <div class="project-links">
+                    <a href="https://github.com/Kesavadatta2410/Foreign-Sketch-Generator" class="project-link"><i class="fab fa-github"></i> Code</a>
+                    <a href="/labels/sketch gen.jpg" class="project-link"><i class="fas fa-external-link-alt"></i> Sample Output</a>
+                </div>
+            </div>
+            <div class="project-card" data-aos="fade-up" data-aos-delay="200">
+                <div class="project-icon"><i class="fas fa-robot"></i></div>
+                <h3>Pantry Chef</h3>
+                <p>It generates the food recipes. It takes the input of images for detection of ingredients.</p>
+                <div class="project-tech"><span>Food</span><span>CNN</span></div>
+                <div class="project-links">
+                    <a href="https://github.com/Kesavadatta2410/Foreign-Sketch-Generator" class="project-link"><i class="fab fa-github"></i> Code</a>
+                    <a href="https://pantrycheffoods.netlify.app/" class="project-link"><i class="fas fa-external-link-alt"></i> Website</a>
+                </div>
+            </div>              
             <div class="project-card" data-aos="fade-up" data-aos-delay="100">
                 <div class="project-icon"><i class="fas fa-charging-station"></i></div>
                 <h3>Wheels on the charge</h3>
@@ -108,6 +128,7 @@
                     <a href="/labels/patent1.jpg" class="project-link"><i class="fas fa-external-link-alt"></i> Details</a>
                 </div>
             </div>
+            
             <div class="project-card" data-aos="fade-up" data-aos-delay="200">
                 <div class="project-icon"><i class="fas fa-shield-alt"></i></div>
                 <h3>Waist belt</h3>
