--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
                 <p class="subtitle">Innovating through Technology & Creativity</p>
                 <div class="cta-buttons">
-                    <a href="/labels/resume.pdf" class="btn primary-btn" download><i class="fas fa-download"></i> Download Resume</a>
+                    <a href="/labels/cv.pdf" class="btn primary-btn" download><i class="fas fa-download"></i> Download Resume</a>
                     <a href="#contact" class="btn secondary-btn"><i class="fas fa-paper-plane"></i> Contact Me</a>
                 </div>
             </div>
@@ -125,7 +125,7 @@
                 <div class="project-links">
                     <!-- <a href="#" class="project-link"><i class="fab fa-github"></i> Code</a> -->
                     <a href="/labels/elp.png" class="project-link"><i class="fas fa-external-link-alt"></i> Design</a>
-                    <a href="/labels/patent1.jpg" class="project-link"><i class="fas fa-external-link-alt"></i> Details</a>
+                    <a href="/labels/patent.pdf" class="project-link"><i class="fas fa-external-link-alt"></i> Details</a>
                 </div>
             </div>
             
