--- a/index.html
+++ b/index.html
@@ -247,6 +247,11 @@
         <h2 class="section-title">Experience</h2>
         <div class="experience-timeline">
             <div class="experience-card fade-in-left">
+                <h3>Technical Executive - Civi Glo Innovations</h3>
+                <p>Developed machines for the smart cities</p>
+                <span>IoT</span>
+            </div>
+            <div class="experience-card fade-in-left">
                 <h3>Python Developer - Cosmic3D Printers</h3>
                 <p>Developed Python programs to directly control 3D printers.</p>
                 <span>3D-Printing</span><span>Python</span>
