--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
                 <p class="subtitle">Innovating through Technology & Creativity</p>
                 <div class="cta-buttons">
-                    <a href="/labels/cv.pdf" class="btn primary-btn" download><i class="fas fa-download"></i> Download Resume</a>
+                    <a href="/labels/resume.pdf" class="btn primary-btn" download><i class="fas fa-download"></i> Download Resume</a>
                     <a href="#contact" class="btn secondary-btn"><i class="fas fa-paper-plane"></i> Contact Me</a>
                 </div>
             </div>
@@ -261,7 +261,7 @@
                 <p>Led events and workshops, mentoring students in entrepreneurship.</p>
                 <span>Startups</span><span>Business</span>
             </div>
-            <div class="experience-card fade-in-left">
+            <div class="experience-card fade-in-right">
                 <h3>Film Club Executive - Woxsen University</h3>
                 <p>Organized film screenings and discussions, fostering creativity among students.</p>
                 <span>Acting</span><span>Movies</span>
