--- a/index.html
+++ b/index.html
@@ -188,6 +188,11 @@
         <h2 class="section-title">Experience</h2>
         <div class="experience-timeline">
             <div class="experience-card fade-in-left">
+                <h3>Research intern - GD Geonka University</h3>
+                <p>Revolutionizing Social Interaction with Emotion-Driven Connectivity”</p>
+                <span>NLP</span> <span>Machine learning</span>
+            </div>
+            <div class="experience-card fade-in-left">
                 <h3>Research intern - Ganpat University</h3>
                 <p>Indentification of Stop Words</p>
                 <span>NLP</span> <span>Machine learning</span>
@@ -444,6 +449,11 @@
         </div>
     </section>
         
+
+
+
+
+    
 
     <div class="footer">
         <p>&copy; 2025 Kesava Datta. All rights reserved.</p>
