--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         <div class="experience-timeline">
             <div class="experience-card fade-in-left">
                 <h3>Research intern - GD Geonka University</h3>
-                <p>Revolutionizing Social Interaction with Emotion-Driven Connectivity”</p>
+                <p>Revolutionizing Social Interaction with Emotion-Driven Connectivity</p>
                 <span>NLP</span> <span>Machine learning</span>
             </div>
             <div class="experience-card fade-in-left">
