--- a/index.html
+++ b/index.html
@@ -187,12 +187,18 @@
 <section id="experience" class="section">
         <h2 class="section-title">Experience</h2>
         <div class="experience-timeline">
+
+            <div class="experience-card fade-in-right">
+                <h3>Research and Development intern - Dtyle.Ai</h3>
+                <p>Worked on AI and computer vision tasks as part of the research team.</p>
+                <span>Computer Vision</span>
+            </div>
             <div class="experience-card fade-in-left">
                 <h3>Research intern - GD Geonka University</h3>
                 <p>Revolutionizing Social Interaction with Emotion-Driven Connectivity</p>
                 <span>NLP</span> <span>Machine learning</span>
             </div>
-            <div class="experience-card fade-in-left">
+            <div class="experience-card fade-in-right">
                 <h3>Research intern - Ganpat University</h3>
                 <p>Indentification of Stop Words</p>
                 <span>NLP</span> <span>Machine learning</span>
@@ -202,12 +208,12 @@
                 <p>Developed machines for the smart cities</p>
                 <span>IoT</span>
             </div>
-            <div class="experience-card fade-in-left">
+            <div class="experience-card fade-in-right">
                 <h3>Python Developer - Cosmic3D Printers</h3>
                 <p>Developed Python programs to directly control 3D printers.</p>
                 <span>3D-Printing</span><span>Python</span>
             </div>
-            <div class="experience-card fade-in-right">
+            <div class="experience-card fade-in-left">
                 <h3>President - Ankur Incubation Club (IIC)</h3>
                 <p>Led events and workshops, mentoring students in entrepreneurship.</p>
                 <span>Startups</span><span>Business</span>
