Initial commit: Portfolio files

--- a/index.html
+++ b/index.html
@@ -282,11 +282,11 @@
                 <h3>Wearable Support Device For Fall Prevention And Mobility Assistance</h3>
                 <p>A motorized smart belt with sensors for fall prevention and mobility support.</p>
                 <div class="Research-tech"><span>Patent: 202541065085 A</span><span>Automation</span><span>Healthcare</span></div>
-                <div class="Research-link">
+                <!-- <div class="Research-link">
                     
                     <a href="/labels/drainage rides.pdf" class="Research-link"><i class="fas fa-external-link-alt"></i> Details</a>
                     <a href="/labels/SIP.png" class="Research-link"><i class="fas fa-external-link-alt"></i> Design</a>
-                </div>
+                </div> -->
             </div>
 
 
