--- a/index.html
+++ b/index.html
@@ -155,8 +155,9 @@
             
             <div class="experience-card fade-in-right">
                 <h3>Research Intern - IIT Hyderabad</h3>
-                <p>Developed an explainable AI pipeline to detect and classify
-                     alternative RNA splicing events linked to genetic disorders</p>
+                <p>Working on an AIML based project focused on detecting
+                    crop areas and identifying crop types from satellite
+imagery</p>
                 <span>Deep Learning</span> <span>Machine learning</span>
             </div>
             <div class="experience-card fade-in-left">
