--- a/index.html
+++ b/index.html
@@ -154,6 +154,14 @@
 
             
             <div class="experience-card fade-in-right">
+                <h3>Research Intern - IIIT Ranchi</h3>
+                <p>Developing an Explainable AI model to predict ICU mortality in 
+                    diabetic patients by highlighting key clinical risk factors 
+                    for transparent decision-making.</p>
+                <span>Deep Learning</span> <span>Explainable AI</span>
+            </div>
+
+            <div class="experience-card fade-in-right">
                 <h3>Research Intern - IIT Hyderabad</h3>
                 <p>Working on an AIML based project focused on detecting
                     crop areas and identifying crop types from satellite
