--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <div class="experience-timeline">
 
             
-            <div class="experience-card fade-in-right">
+            <div class="experience-card fade-in-left">
                 <h3>Research Intern - IIIT Ranchi</h3>
                 <p>Developing an Explainable AI model to predict ICU mortality in 
                     diabetic patients by highlighting key clinical risk factors 
