--- a/index.html
+++ b/index.html
@@ -532,6 +532,13 @@
                             </div>
                         </div>
                         <div class="skill-item">
+                            <img src="/assets/genai.png" alt="Generative AI" class="skill-icon">
+                            <span>Generative AI</span>
+                            <div class="skill-bar">
+                                <div class="skill-progress" data-width="90"></div>
+                            </div>
+                        </div>
+                        <div class="skill-item">
                             <img src="/assets/nlp.png" alt="NLP" class="skill-icon">
                             <span>Natural Language Processing</span>
                             <div class="skill-bar">
